SFDCProject/src/objects/Phase_Template__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_Number__c</fullName>
        <label>Phase Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Status__c</fullName>
        <label>Phase Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Template</label>
        <referenceTo>Project_Template__c</referenceTo>
        <relationshipLabel>Phase Templates</relationshipLabel>
        <relationshipName>Phase_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Phase Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phase_Number__c</columns>
        <columns>Project_Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Phase Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phase Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>